<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iJoint</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_sync">Sync Now!</string>
    <string name="action_signout">Sign Out</string>
    <string name="logo">logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="arm_side">ARM SIDE</string>
    <string name="target_angle">TARGET ANGLE</string>
    <string name="number_of_round">NUM OF ROUND</string>
    <string name="default_time">00:00</string>
    <string name="unknown">N/A</string>
    <string name="default_target_angle">0°</string>
    <string name="default_number_of_round">0</string>
    <string name="default_angle">0°</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="perform_task">Perform Task</string>
    <string name="arrow">arrow</string>
    <string name="loading">Loading</string>
    <string name="ready">READY</string>
    <string name="complete">COMPLETE</string>
    <string name="synced">SYNCED</string>
    <string name="calibration">Calibration</string>
    <string name="start_calibration">Start Calibration</string>
    <string name="next">Next</string>
    <string name="setting">Setting</string>
    <string name="uploading">Now Uploading...</string>
    <string name="cannot_connect_server">Can\'t connect right now.</string>
    <string name="popup_menu_delete">Delete</string>

    <!--Main-->
    <string name="tab_treatment">Treatment</string>
    <string name="tab_sample_video">Sample Video</string>
    <string name="tab_profile">Profile</string>

    <!--Treatment Tab-->
    <string name="treatment_new_header">New Treatment</string>
    <string name="treatment_list_item_arm_side_label">Arm side : </string>
    <string name="treatment_during_header">Current Treatment</string>

    <!--Menu-->
    <string name="profile_menu_app_setting">Application Setting</string>
    <string name="profile_menu_task_history">Task History</string>
    <string name="profile_menu_sign_out">Sign Out</string>

    <!--Error Message-->
    <string name="error">Error : %s</string>
    <string name="error.empty.username">Please enter your username</string>
    <string name="error.empty.password">Please enter your password</string>
    <string name="error.login.incorrect">Incorrect Username/Password. Please try again.</string>

    <!--Preference Setting-->
    <string name="pref_title_exercise_notification">Exercise Notification</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>
    <!--Notification-->
    <string name="notification_exercise_title">Exercise Title</string>
    <string name="notification_exercise_detail">Exercise Detail</string>

    <!--Task-->
    <string name="task_complete">COMPLETE</string>
    <string name="task_ready">READY</string>
    <string name="task_sync">SYNCED</string>
    <string name="task_exercise_type_extension">Extension</string>
    <string name="task_exercise_type_flexion">Flexion</string>
    <string name="task_exercise_type_horizontal_flexion">Horizontal Flexion</string>
    <string name="task_new_treatment_header">Record first angle for start Treatment</string>
    <string name="task_during_today_treatment_header">Today Tasks</string>
    <string name="task_during_older_treatment_header">Remaining Tasks</string>

    <!--Exercise Video-->
    <string name="exercise_video_header">Example Video for Patient</string>
    <string name="treatment_all">All</string>
    <string name="treatment_left">Left</string>
    <string name="treatment_right">Right</string>
    <string name="API_KEY">AIzaSyA_LYwKgnec6CqPQMPN3rBRZFZAX7KthEs</string>
    <string name="error_init_failure">Initialization failure: Unable to play video</string>

</resources>
