<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".SignInActivity"
    android:background="@color/light_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perform_task"
            android:id="@+id/headline"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/normal_box"
            android:id="@+id/linearLayout"
            android:layout_marginTop="14dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="14dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arm_side"
                    android:id="@+id/side_label"
                    android:fontFamily="sans-serif-light"
                    android:textSize="12sp"
                    android:textColor="@color/grey"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:id="@+id/side_value"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="14dp"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/target_angle"
                    android:id="@+id/target_angle_label"
                    android:fontFamily="sans-serif-light"
                    android:textSize="12sp"
                    android:textColor="@color/grey"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_target_angle"
                    android:id="@+id/target_angle_value"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="14dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_round"
                    android:id="@+id/number_of_round_label"
                    android:fontFamily="sans-serif-light"
                    android:textSize="12sp"
                    android:textColor="@color/grey"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_number_of_round"
                    android:id="@+id/number_of_round_value"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_time"
            android:id="@+id/tv_time"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="119.48°"
            android:id="@+id/tv_angle"
            android:layout_marginTop="30dp"
            android:textColor="@color/primary"
            android:textSize="60sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_exercise"
            android:id="@+id/btn_control"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_primary"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:onClick="startExercise" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/uploadingLayout"
            android:layout_marginTop="20dp"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar2"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploading"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>