<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="horizontal">

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/treatment_all"
        android:id="@+id/btn_all"
        android:fontFamily="sans-serif-light"
        android:background="@drawable/btn_primary"
        android:textColor="@color/white"
        android:textSize="16sp" />


    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="8dp"
        android:layout_height="wrap_content"
        android:text="@string/treatment_left"
        android:id="@+id/btn_left"
        android:fontFamily="sans-serif-light"
        android:background="@drawable/btn_primary"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="8dp"
        android:layout_height="wrap_content"
        android:text="@string/treatment_right"
        android:id="@+id/btn_right"
        android:fontFamily="sans-serif-light"
        android:background="@drawable/btn_primary"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>