<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".activity.SignInActivity"
    android:background="@color/light_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:layout_marginTop="40dp"
            android:hint="@string/username"
            android:fontFamily="sans-serif-light"
            android:drawableLeft="@drawable/icon_user"
            android:drawableStart="@drawable/icon_user"
            android:drawablePadding="10dp"
            android:background="@drawable/normal_edittext"
            android:textSize="16sp"
            android:inputType="text" />

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:fontFamily="sans-serif-light"
            android:drawableLeft="@drawable/icon_pass"
            android:drawableStart="@drawable/icon_pass"
            android:drawablePadding="10dp"
            android:background="@drawable/normal_edittext"
            android:textSize="16sp"
            android:maxLines="1" />

        <Button
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/btn_sign_in"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:background="@drawable/btn_primary"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:onClick="signIn" />

    </LinearLayout>

</ScrollView>