<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/light_grey"
    android:baselineAligned="false"
    android:paddingLeft="14dp"
    android:paddingRight="14dp"
    android:paddingTop="30dp"
    android:paddingBottom="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calibration"
        android:id="@+id/headline"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_below="@+id/headline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:progress="100"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_below="@+id/progress_bar"
        android:text="00:05" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1.38°"
        android:id="@+id/tv_angle"
        android:layout_below="@+id/tv_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/primary"
        android:textSize="60dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_calibration"
        android:id="@+id/btn_control"
        android:layout_below="@+id/tv_angle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_primary"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:onClick="startCalibration" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/btn_next"
        android:layout_below="@+id/tv_angle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_primary"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:onClick="next"
        android:visibility="gone"/>

</RelativeLayout>
