<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:background="@color/yellow">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ready"
                android:id="@+id/status"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/info_layout"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Left Shoulder Exercise"
                android:id="@+id/tv_exercise_name"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20 January 2015"
                android:id="@+id/tv_date"
                android:textColor="@color/grey"
                android:textSize="12sp" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="240dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Exercise Type:"
                        android:id="@+id/tv_type"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Type"
                        android:id="@+id/tv_type_name"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="120dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Target Angle:"
                        android:id="@+id/textView6"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_angle"
                        android:id="@+id/tv_target_angle"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Target Round:"
                        android:id="@+id/textView8"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_number_of_round"
                        android:id="@+id/tv_number_of_round"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/icon_arrow"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" />

</RelativeLayout>